crates/nidus/tests/ui/pipe_missing_type.rs
use nidus::prelude::*;

#[controller("/users")]
struct UsersController;

#[routes]
impl UsersController {
    #[post("/")]
    #[pipe]
    async fn create(&self) {}
}

fn main() {}
